--- a/package.json
+++ b/package.json
@@ -3,17 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3004",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.2",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@sanity/cli": "^2.29.5",
+    "@sanity/client": "^2.23.2",
+    "@sanity/image-url": "^1.0.1",
+    "@stripe/stripe-js": "^1.29.0",
+    "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
+    "canvas-confetti": "^1.5.1",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.3.1",
     "next": "12.1.5",
+    "next-sanity-image": "^3.2.1",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.3.1",
+    "stripe": "^8.219.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5"
   }
